--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+nav {
+    position: fixed;
+    background-color: rgb(191, 191, 191);
+    width: 100%
+}
+
 #logo {
     font-size: 30px;
     font-weight: 700;
@@ -10,6 +16,34 @@ header {
     border-bottom: 1px solid rgb(176, 169, 169);
 }
 
+.cookies {
+    background: transparent;
+    border: none;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    z-index: 999;
+}
+
+.contact {
+    background: transparent;
+    border: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 999;
+}
+
 footer {
     background-color: gray;
 }
+
+.button { 
+    cursor: pointer; 
+    border-radius: 50px; 
+    background-color: rgba(0, 0, 0); 
+    height: 40px; 
+    width: 200px; 
+    color: white; 
+    font-size: 20px; 
+} 
