--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 3.5rem;
+}
+
 ul a {
     text-decoration: none;
     color: black;
@@ -14,7 +20,6 @@ ul {
 #grid-container {
     display: grid;
     grid-template-areas: "header" "main" "footer";
-    padding: 1rem;
 }
 
 header {
@@ -27,21 +32,34 @@ header nav {
     display: flex;
     justify-content: space-between;
     position: fixed;
+    width: 100%;
+    padding: 1rem;
+    box-sizing: border-box;
 }
 
 header nav div {
     display: flex;
-    gap: 1rem;
+    gap: 5.4rem;
 }
+
+.fa-xl {
+    font-size: 1.5em;
+    line-height: 1.042em;
+    vertical-align: -0.125em;
+  }
+
+.header-image {
+    width: 656px;
+    padding-top: 46px;
+}
+
 
 nav {
-    position: fixed;
-    background-color: rgb(191, 191, 191);
-    width: 100%
+    background-color: rgb(255, 255, 255);
 }
 
-#logo {
-    font-size: 30px;
+.logo {
+    font-size: 39px;
     font-weight: 700;
     text-decoration: none;
     color: black;
@@ -76,6 +94,29 @@ main {
     grid-area: main;
 }
 
+article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: center;
+    border: solid 2px black;
+    width: 300px;
+    height: 280px;
+    margin-left: 20px
+}
+
+.product-card img {
+    width: 150px; 
+    height: 100px; 
+}
+
 .cookies {
     background: transparent;
     border: none;
@@ -99,14 +140,36 @@ footer {
     grid-area: footer;
 }
 
-.button { 
+.header-button { 
     cursor: pointer; 
     border-radius: 50px; 
-    background-color: rgba(0, 0, 0); 
+    background-color: rgba(0, 0, 0, 0.6); 
     height: 40px; 
     width: 200px; 
     color: white; 
-    font-size: 20px; 
+    font-size: 20px;
+    position: absolute; 
+    top: 44%;
+    left: 60%;
+} 
+
+.header-text {
+    position: absolute;
+    top: 40%;
+    left: 62%;
+    width: 100%;
+    color: white;
+}
+
+.button { 
+    cursor: pointer; 
+    border-radius: 50px; 
+    background-color: rgba(0, 0, 0, 0.6); 
+    height: 40px; 
+    width: 200px; 
+    color: white; 
+    font-size: 20px;
+    position: absolute; 
 } 
 
 .square-button {
