--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 h1 {
     display: flex;
     justify-content: center;
     font-size: 3.5rem;
+}
+
+h3 {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
 }
 
 ul a {
@@ -20,8 +26,9 @@ ul {
 #grid-container {
     display: grid;
     grid-template-areas: "header" "main" "footer";
+    grid-template-columns: 1fr;
 }
-
+ 
 header {
     font-size: 1.5rem;
     font-weight: 600;
@@ -35,6 +42,7 @@ header nav {
     width: 100%;
     padding: 1rem;
     box-sizing: border-box;
+    z-index: 99;
 }
 
 header nav div {
@@ -51,6 +59,29 @@ header nav div {
 .header-image {
     width: 656px;
     padding-top: 46px;
+}
+
+.header-button {
+    cursor: pointer;
+    border-radius: 50px;
+    background-color: rgba(0, 0, 0);
+    height: 28px;
+    width: 201px;
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 44%;
+    left: 60%;
+    text-decoration: none;
+    text-align: center;
+}
+
+.header-text {
+    position: absolute;
+    top: 40%;
+    left: 57%;
+    width: 100%;
+    color: white;
 }
 
 
@@ -74,16 +105,17 @@ nav {
     display: flex;
     flex-direction: column;
     position: absolute;
-    background-color: black;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
-    top: 40px;
-    width: 100%;
+    top: 100%;
+    width: 31%;
     list-style: none;
+    left: 0%;
 }
 
 .responsive a {
-    color: white;
+    color: rgb(0, 0, 0);
     display: inline-block;
     padding: 1rem;
     text-decoration: none;
@@ -94,12 +126,92 @@ main {
     grid-area: main;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.welcome {
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 article {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
   }
+
+.women-img {
+    width: 60%;
+}
+
+.women-button {
+    cursor: pointer;
+    border-radius: 50px;
+    background-color: rgba(0, 0, 0);
+    height: 28px;
+    width: 201px;
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 131%;
+    left: 60%;
+    text-decoration: none;
+    text-align: center;
+}
+
+.man-img {
+    width: 60%;
+}
+
+.man-button {
+    cursor: pointer;
+    border-radius: 50px;
+    background-color: rgba(0, 0, 0);
+    height: 28px;
+    width: 210px;
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 210%;
+    left: 60%;
+    text-decoration: none;
+    text-align: center;
+}
+
+.child-img {
+    width: 100%;
+}
+
+.children-button {
+    cursor: pointer;
+    border-radius: 50px;
+    background-color: rgba(0, 0, 0);
+    height: 28px;
+    width: 210px;
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 274%;
+    left: 60%;
+    text-decoration: none;
+    text-align: center;
+}
+
+.children-text {
+    position: absolute;
+    top: 269%;
+    left: 38%;
+    width: 100%;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
 
 .product-card {
     display: flex;
@@ -116,6 +228,21 @@ article {
     width: 150px; 
     height: 100px; 
 }
+
+.brands {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.brands ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+}
+ .brands li {
+    width: 20%
+ }
 
 .cookies {
     background: transparent;
@@ -139,38 +266,6 @@ footer {
     background-color: gray;
     grid-area: footer;
 }
-
-.header-button { 
-    cursor: pointer; 
-    border-radius: 50px; 
-    background-color: rgba(0, 0, 0, 0.6); 
-    height: 40px; 
-    width: 200px; 
-    color: white; 
-    font-size: 20px;
-    position: absolute; 
-    top: 44%;
-    left: 60%;
-} 
-
-.header-text {
-    position: absolute;
-    top: 40%;
-    left: 62%;
-    width: 100%;
-    color: white;
-}
-
-.button { 
-    cursor: pointer; 
-    border-radius: 50px; 
-    background-color: rgba(0, 0, 0, 0.6); 
-    height: 40px; 
-    width: 200px; 
-    color: white; 
-    font-size: 20px;
-    position: absolute; 
-} 
 
 .square-button {
     background-color: black;
