--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h1 {
@@ -212,23 +212,6 @@ article {
     font-weight: 600;
 }
 
-
-.product-card {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    justify-content: center;
-    border: solid 2px black;
-    width: 300px;
-    height: 280px;
-    margin-left: 20px
-}
-
-.product-card img {
-    width: 150px; 
-    height: 100px; 
-}
-
 .brands {
     display: flex;
     flex-wrap: wrap;
@@ -243,6 +226,31 @@ article {
  .brands li {
     width: 20%
  }
+
+
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: center;
+    border: solid 2px black;
+    width: 300px;
+    height: 349px;
+    margin-left: 27%;
+    margin-bottom: 5%;
+    margin-top: 4%;
+}
+
+.products h2 {
+    display: flex;
+    justify-content: center;
+}
+
+.product-card img {
+    width: 150px; 
+    height: 100px; 
+}
 
 .cookies {
     background: transparent;
@@ -263,7 +271,7 @@ article {
 }
 
 footer {
-    background-color: gray;
+    background-color: #eedfdf;
     grid-area: footer;
 }
 
